--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,6 +3,10 @@ services:
     build: .
     ports:
       - "8000:5000"
+    volumes:
+      - .:/code
+    environment:
+      FLASK_DEBUG: 'true'
   
   redis:
     image: "redis:alpine"
